@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5745 2004/04/26 14:58:33 adam Exp $
+$NetBSD: CHANGES,v 1.5746 2004/04/26 17:28:58 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2252,3 +2252,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated thunderbird to 0.5nb1 [taya 2004-04-26]
 	Added thunderbird-gtk2-0.5 [taya 2004-04-26]
 	Updated xplanet to 1.0.6 [adam 2004-04-26]
+	Updated mklivecd to 0.4 [xtraeme 2004-04-26]
